2009-03-24  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h: fix a problem when
	    compiling with Oracle 9.2.
	* ext/oci8/apiwrap.yml: suppres warnings 'discards qualifiers
	    from pointer target type' when compiling with Oracle 8i.

2009-03-17  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add a new file.
	* VERSION: change version to 2.0.1.
	* Makefile: add targets to make a binary gem for Windows.
	* dist-files: add NEWS
	* ext/oci8/extconf.rb, lib/oci8.rb.in: rename oci8lib.so
	    to oci8lib_18.so and oci8lib_191.so. The renamed name
	    depends on the ruby version.
	* lib/oci8/datetime.rb: fix the fetched type for date column
	    when using Oracle 8.x.
	* ruby-oci8.gemspec: fix to make a binary gem which contains
	    both oci8lib_18.so and oci8lib_191.so.

2009-03-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml: add prototypes for OCIServerVersion() and
	    OCIServerRelease().
	* ext/oci8/oci8.c: (1) add a private method OCI8#oracle_server_vernum,
	    which returns Oracle server version number.
	    (2) fix a class method OCI8.oracle_client_vernum when using Oracle
	    client 10.1 or lower.
	* lib/oci8/datetime.rb: fix year information when fetching a date
	    whose year is between A.D. 1 and A.D. 139.
	* lib/oci8/oci8.rb: (1) add OCI8#oracle_server_version.
	*   (2) change the default data type for timestamp with time zone
	    from DateTime to Time.

2009-03-11  KUBO Takehiro  <kubo@jiubao.org>
	* oraconf.rb: fix big/little endian checking problem on Mac OS X ppc.
	    (contributed by unknown. See: Bug ID 24284 on rubyforge.)

2009-02-15  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocidatetime.c: fix array DML and DateTime object problem.
	    OCI8::Cursor#bind_param_array(key, array_of_datetime) didn't
	    work. (Reported by Leoš Bitto)
	* test/test_array_dml.rb: fix to test array DML and DateTime object.

2009-02-10  KUBO Takehiro  <kubo@jiubao.org>